chore(content): add sollevante
Add Sol Levante with a shorter playback window and additional
bitrate variations.

Remove the cosmo variation as this ended up not having any
audio in the original content

--- a/.content/package.json
+++ b/.content/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "Simple hosting serving for testing HLS/DASH-CMAF video on as many platforms as possible.",
   "scripts": {
-    "start": "http-server -p 6000 ./public"
+    "start": "http-server --port 9000 --cors ./public"
   },
   "author": "Alex Dodge",
   "license": "MIT",
