--- a/.content/package.json
+++ b/.content/package.json
@@ -8,6 +8,6 @@
   "author": "Alex Dodge",
   "license": "MIT",
   "devDependencies": {
-    "http-server": "^0.12.3"
+    "http-server": "0.12.3"
   }
 }
